--- a/ashley-yang.html
+++ b/ashley-yang.html
@@ -1,93 +1,175 @@
-<div class="prospect-card">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Ashley Yang — MAP Pro Bowl Scouting Report</title>
 
-    <!-- HERO HEADER -->
-    <div class="hero-block">
-        <h1>ASHLEY YANG</h1>
-        <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ All-Star Investment Banking Prospect</p>
-        <div class="top-line">
-            <span class="pill blue">Cornell University</span>
-            <span class="pill gold">Round 1</span>
-            <span class="pill elite">Top Recommendation</span>
-        </div>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+
+  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
+
+  /* ---------------- HERO ---------------- */
+  .prospect-hero {
+    display:flex; flex-wrap:wrap; justify-content:space-between; gap:1.25rem;
+    padding:1.75rem 1.25rem; border-radius:14px; background:#2E5084; color:#fff; margin-bottom:2rem;
+  }
+
+  .prospect-name { font-family:'Archivo Black'; font-size:2rem; letter-spacing:.02em; margin:0 0 .25rem; text-transform:uppercase;}
+  .prospect-tagline { margin:0 0 .15rem; font-size:1rem; font-weight:600;}
+  .prospect-subtitle {margin:0; font-size:.9rem; opacity:.9;}
+
+  /* Grade Card */
+  .prospect-grade-card {
+    min-width:200px; padding:1rem 1.25rem;
+    border-radius:12px; background:rgba(255,255,255,.15);
+    border:1px solid rgba(255,255,255,.35); backdrop-filter:blur(4px);
+  }
+
+  .grade-label{ font-size:.7rem; opacity:.8; text-transform:uppercase;}
+  .grade-score{ font-family:'Archivo Black'; font-size:2.2rem; margin:.15rem 0;}
+  .grade-tier{ font-size:.9rem; font-weight:600;}
+
+  /* Recommendation Pill */
+  .recommendation-pill{
+    display:inline-flex; align-items:center; gap:5px; background:#fff; color:#2E5084;
+    padding:4px 10px; border:1px solid #dce2ee; border-radius:30px; font-weight:600;
+    font-size:.78rem; margin-top:.55rem; width:fit-content;
+  }
+
+  .pill-box{width:12px;height:12px;border-radius:3px;}
+  .pill-green{background:#22c55e;} .pill-yellow{background:#eab308;} .pill-red{background:#ef4444;}
+
+  /* ---------------- META ---------------- */
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;text-transform:uppercase;margin:0 0 .7rem;}
+  .meta-list{list-style:none;padding:0;margin:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
+
+  /* ---------------- CONTENT ---------------- */
+  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body{font-size:.9rem;line-height:1.52;}
+  .section-list{font-size:.9rem;line-height:1.52;padding-left:1.2rem;} .section-list li{margin-bottom:.38rem;}
+
+  @media(max-width:650px){
+    .meta-list li{flex-direction:column;align-items:flex-start;}
+    .meta-value{margin-left:0;margin-top:2px;text-align:left;}
+  }
+</style>
+</head>
+
+<body>
+<div class="prospect-page">
+
+  <!-- =========================================================
+       🔥 Hero Section
+  ============================================================-->
+  <section class="prospect-hero">
+    <div>
+      <h1 class="prospect-name">Ashley Yang</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ All-Star Investment Banking Prospect</p>
+      <p class="prospect-subtitle">Cornell University · Fencing · Class of 2028</p>
     </div>
 
-    <!-- QUICK SUMMARY BAR -->
-    <div class="quick-metrics">
-        <span><strong>Rank:</strong> #18 of 60</span>
-        <span><strong>Major:</strong> Applied Economics & Management</span>
-        <span><strong>Track:</strong> Business Management</span>
-        <span><strong>Graduation:</strong> 2028</span>
-        <span><strong>GPA:</strong> 4.04</span>
-        <span><strong>Sport:</strong> Fencing 🤺</span>
-        <span><strong>Location:</strong> New York City, NY</span>
+    <div class="prospect-grade-card">
+      <div class="grade-label">MAP Prospect Grade</div>
+      <div class="grade-score">95</div>
+      <div class="grade-tier">Round 1</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-green"></div>
+        <div class="pill-box pill-green"></div>
+        <div class="pill-box pill-green"></div>
+        <span>Top Recommendation</span>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- =========================================================
+       🔥 Prospect + MAP Profile (Pro Bowl Version)
+  ============================================================-->
+  <section class="prospect-meta">
+
+    <!-- Prospect Info -->
+    <div class="meta-column">
+      <h2 class="meta-title">Prospect Info</h2>
+      <ul class="meta-list">
+        <li><span>School</span><span class="meta-value">Cornell University</span></li>
+        <li><span>Major</span><span class="meta-value">Applied Economics</span></li>
+        <li><span>Minor</span><span class="meta-value">Business Management</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">4.04</span></li>
+        <li><span>Sport</span><span class="meta-value">Fencing</span></li>
+        <li><span>Hometown</span><span class="meta-value">New York City, NY</span></li>
+      </ul>
     </div>
 
-    <!-- PERFORMANCE SNAPSHOT -->
-    <div class="performance-box">
-        <h3>MAP Profile — Pro Bowl Games</h3>
-        <div class="score-row"><strong>IB Exam #1:</strong> 62%</div>
-        <div class="score-row"><strong>IB Exam #2:</strong> 100%</div>
-        <div class="score-row"><strong>IB Exam #3:</strong> 100%</div>
-        <div class="score-row"><strong>IB Exam #4:</strong> 100%</div>
-        <div class="score-row"><strong>IB Exam #5:</strong> 50%</div>
-        <p class="note">*IB1 scored /100. IB2–IB5 converted from 75 to 100 scale.</p>
+    <!-- Pro Bowl MAP Profile -->
+    <div class="meta-column">
+      <h2 class="meta-title">MAP Profile — Pro Bowl Games</h2>
+      <ul class="meta-list">
+        <li><span>Fellowship Rank</span><span class="meta-value">18 / 60</span></li>
+        <li><span>IB Exam #1</span><span class="meta-value">62%</span></li>
+        <li><span>IB Exam #2</span><span class="meta-value">100%</span></li>
+        <li><span>IB Exam #3</span><span class="meta-value">100%</span></li>
+        <li><span>IB Exam #4</span><span class="meta-value">100%</span></li>
+        <li><span>IB Exam #5</span><span class="meta-value">50%</span></li>
+      </ul>
     </div>
 
-    <!-- OVERVIEW -->
-    <section class="section">
-        <h2>Overview</h2>
-        <p>
-            Ashley stands out as one of the most polished sophomore prospects in the Pro Bowl cohort — academically exceptional 
-            at Cornell Dyson (4.04 GPA), Division I fencer, and multi-track MAP alum with tangible technical exposure across IB, PE, 
-            leveraged finance, credit and S&T. Her communication quality, structure in deliverables, and clarity under pressure are 
-            consistently high-signal. Ashley arrives prepared, performs with composure, and submits clean work — she is the type of 
-            athlete who executes above expectation when stakes rise.
-        </p>
-        <p>
-            A returning MAP athlete, she has repeatedly shown reliability in sprint windows, producing well-formatted written outputs, 
-            financial reasoning with executive tone, and strong synthesis of deal-relevant information. Her maturity and technical 
-            literacy make her an early favorite for competitive 2026 pipelines.
-        </p>
-    </section>
+  </section>
 
-    <!-- STRENGTHS -->
-    <section class="section">
-        <h2>Strengths</h2>
-        <ul>
-            <li>Multiple high-tier finance fellowships completed — PE, S&T, IB — rare early versatility</li>
-            <li>Professional-caliber communication & slide structure — uses frameworks naturally</li>
-            <li>High execution reliability in deadlines, sprint tasks, & team leadership moments</li>
-            <li>Poised under live questioning — confident speaker with strong command presence</li>
-            <li>Controls pace extremely well — concise logic, crisp delivery, low-error output</li>
-        </ul>
-    </section>
 
-    <!-- DEVELOPMENT -->
-    <section class="section">
-        <h2>Development Areas</h2>
-        <p>
-            Continued progression will come from expanding advanced modeling depth — moving into full LBO buildouts, operating case 
-            sensitivities, and memo drafting with more scenario ranges. IB5 score indicates opportunity to sharpen multi-variable reasoning 
-            under time pressure, which is common at this level and expected to accelerate quickly given her work ethic and existing foundation.
-        </p>
-    </section>
+  <!-- =========================================================
+       🔥 Scouting Body Sections
+  ============================================================-->
 
-    <!-- PROJECTION -->
-    <section class="section">
-        <h2>Outlook & Projection</h2>
-        <p>
-            <strong>Day-one internship contributor.</strong> Ashley is a clear high-probability IB placement and a top sophomore candidate for 
-            deal-driven roles across M&A, PE, or credit. She already operates with intern-ready professionalism, demonstrates poise that 
-            translates well to client-facing environments, and brings execution habits sponsors trust. Expect upward velocity — a likely 
-            summer analyst as early as 2026 with potential for buy-side conversion long term.
-        </p>
-    </section>
+  <section class="prospect-section">
+    <h2 class="section-title">Overview</h2>
+    <p class="section-body">
+      Ashley Yang is one of the most polished and complete young prospects in the Pro Bowl cohort — technical fluency, execution
+      maturity, and a clear upward trajectory. Across MAP, she has consistently delivered high-quality outputs with professionalism
+      beyond her year. Experience across Morgan Stanley, Bank of America, private equity workstreams, and live investing experience
+      at GI Capital give her an unusually robust foundation for sophomore-cycle recruiting. A genuine competitor with leadership
+      presence and fencing-built discipline, she profiles as a high-floor, high-ceiling IB candidate who continues to accelerate.
+    </p>
+  </section>
 
-    <!-- BUTTONS -->
-    <div class="actions">
-        <a href="#" class="btn resume">📄 Résumé</a>
-        <a href="#" class="btn link">🔗 LinkedIn</a>
-        <a href="#" class="btn film">🎥 Game Film</a>
-    </div>
+  <section class="prospect-section">
+    <h2 class="section-title">Strengths</h2>
+    <ul class="section-list">
+      <li>Clear command of finance concepts; strong deliverable quality across valuation, M&A, PE, and public comps work</li>
+      <li>Leadership experience — captained teams, led deliverables, directed 10-person MAP roster with accountability & clarity</li>
+      <li>Professional presence and communication polish; strong written and presentation execution</li>
+      <li>Private equity experience + Morgan Stanley + BofA = validated track record in deal reasoning early in pipeline</li>
+      <li>High GPA & strong academic discipline — consistently reliable output speed and rigor</li>
+    </ul>
+  </section>
+
+  <section class="prospect-section">
+    <h2 class="section-title">Areas for Development</h2>
+    <ul class="section-list">
+      <li>Continue deepening technical modeling reps (builds on already strong foundation)</li>
+      <li>Expand market commentary confidence — project investment views more assertively</li>
+      <li>More live deal exposure will accelerate readiness for sophomore internship recruiting</li>
+    </ul>
+  </section>
+
+  <section class="prospect-section">
+    <h2 class="section-title">Projection</h2>
+    <p class="section-body">
+      Top-tier sophomore investment banking prospect with early PE exposure and multi-fellowship excellence. Ashley carries every
+      indicator of a future high-performing analyst — execution discipline, professionalism, leadership voice, and rapid skill growth.
+      With continued live deal reps and expanded valuation practice, she projects as a strong candidate for Summer 2027 IB offers.
+    </p>
+  </section>
 
 </div>
+</body>
+</html>
